mobile alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -220,9 +220,9 @@ margin-top: 20px;
 }
 
 .workerontree {
-  width: 320px;
+  width: 335px;
   height: 408px;
-  margin-left: 0px;
+  margin-left: 18px;
 }
 
 
@@ -234,7 +234,7 @@ margin-top: 20px;
   flex-direction: column;
 }
 .description-text{
-  margin-left: 68px;
+  margin-left: 89px;
 }
 h1{
   font-size: 20px;
@@ -245,15 +245,17 @@ h1{
 
 
 .logimage {
-  width: 350px;
+  width: 311px;
   height: 408px;
-  margin-right: 50px;
+  margin-left: 18px;
+  margin-bottom: 30px;
 }
 
 .directorimage {
-  width: 391px;
+  width: 318px;
   height: 442px;
-  margin-right: 56px;
+  margin-right: 46px;
+  /* margin-bottom: 30px; */
 }
 
 p {
@@ -277,7 +279,6 @@ header{
 
 footer{
   font-size: 10px;
-  margin-left: -111px;
 }
 
 .traininglist {
